--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -37,11 +37,11 @@
     <string name="show_scale_ruler">Afficher l'échelle</string>
     <string name="show_ruler_measuring">Afficher le bouton de mesure</string>
     <string name="show_zoom_controls">Afficher le contrôle du zoom</string>
-    <string name="show_zoom_controls_summary">Afficher les contrôles de zoom sur la carte</string>
+    <string name="show_zoom_controls_summary">Afficher le contrôles du zoom sur la carte</string>
     <string name="show_compass">Afficher le compas</string>
     <string name="map">Carte</string>
     <string name="map_summary">Paramètres de carte</string>
-    <string name="app_description">Application mobile de SIG pour la collecte de données et leurs envoi vers un serveur. L'application permet aussi d'enregistrer des parcours et se synchronise avec le serveur.</string>
+    <string name="app_description">Application mobile de SIG pour la collecte de données et leurs envoi vers un serveur. L'application permet aussi d'enregistrer des parcours et se synchronise avec un serveur.</string>
     <string name="credits_intro">Crédits</string>
     <string name="credits">Certains icônes proviennent de <a href="http://icons8.com/android-icons">Icons8.com</a> sous licence <a href="http://creativecommons.org/licenses/by-nd/3.0/">CC BY-ND 3.0 license</a>, <a href="http://materialdesignicons.com/">materialdesignicons.com</a> et <a href="http://romannurik.github.io/AndroidAssetStudio/icons-launcher.html">romannurik.github.io</a> sous licence <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0 license</a></string>
     <string name="copyright"><![CDATA[© <a href=\"http://nextgis.com\">NextGIS</a>, 2012–2016]]></string>
@@ -54,7 +54,7 @@
     <string name="select_layer">Choisir la couche à éditer</string>
     <string name="menu_locate">Localiser</string>
     <string name="select_file">Choisir le fichier pour créer la couche</string>
-    <string name="warning_install_file_manager">Merci d'installer un exploreur de fichier</string>
+    <string name="warning_install_file_manager">Merci d'installer un explorateur de fichier</string>
     <string name="error_file_unsupported">Le format n'est pas supporté</string>
     <string name="warning_not_implemented">Pas encore supporté</string>
     <string name="pref_location_accuracy">Précision de la position</string>
@@ -121,7 +121,7 @@
     <string name="same_layer_name">Il y a déja une couche avec le même nom</string>
     <string name="default_field_name">Description</string>
     <string name="pref_sync_notification">Afficher les notification de synchronisation</string>
-    <string name="tap_to_measure">Tap on map to check points</string>
+    <string name="tap_to_measure">Toucher l'écran pour placer les marqueurs</string>
     <string name="permissions">Permissions</string>
     <string name="requested_permissions">L'application nécessite certaines permissions pour fonctionner correctement. Notamment un accès en écriture sur les stockages externes (pour sauvegarder sur la carte sd),
         , un accès au service de positionnement et l'accès aux contacts (afin de créer et modifier les comptes web).</string>
@@ -144,20 +144,20 @@
     <string name="update_title">Mettre à jour?</string>
     <string name="update_check">Vérifier les mise à jour</string>
     <string name="update_no">Pas de mise à jour trouvée</string>
-    <string name="intro1">Welcome to NextGIS Mobile!\n\nThis app can:\n* Create and navigate multi-layered maps\n* Add and create geodata\n* Help in field data collection\n* Write tracks\nand much more!</string>
-    <string name="intro2">Sign in to get the most out of this app, synchronize your data and get regular updates (support plan is needed). You can sign in later in Settings.</string>
-    <string name="support_available">Supported version available</string>
-    <string name="more">More</string>
+    <string name="intro1">Bienvenue sur NextGIS Mobile!\n\nCette application peut:\n* Créé et naviguer sur des cartes multi-couches\n* Ajouter et manipuler des geodata\n* Aider à la collecte de donnée terrain\n* Enregistrer des parcours\n et beaucoup plus!</string>
+    <string name="intro2">Enregistrez vous pour tirer un maximum d'avantage de cette application, synchronisé vos données et optenez des mises à jour régulières (inscription au service de support nécessaire). Vous pouvez vous inscrire plus tard dans les paramètres.</string>
+    <string name="support_available">Une version avec support et disponible</string>
+    <string name="more">Plus</string>
     <string name="pricing">http://nextgis.com/pricing/</string>
-    <string name="intro1_1">Create multi-layered maps</string>
-    <string name="intro1_2">Add and create geodata</string>
-    <string name="intro1_3">Collect field data</string>
-    <string name="intro1_4">Record tracks</string>
-    <string name="intro2_1">New functionality, unavailable in trial version</string>
-    <string name="intro2_2">Regular updates</string>
-    <string name="intro2_3">Quick bug-fixing</string>
-    <string name="intro2_4">Direct support</string>
-    <string name="intro_more">Get more:</string>
-    <string name="intro_free">Your app version is free</string>
-    <string name="intro_get_pro">Get NextGIS Mobile Pro</string>
+    <string name="intro1_1">Créer une carte multi-couches</string>
+    <string name="intro1_2">Ajouter et créer des geodata</string>
+    <string name="intro1_3">Collecter des données terrain</string>
+    <string name="intro1_4">Enregistrer des parcours</string>
+    <string name="intro2_1">Nouvelle fonctionalité, non disponible en version d'essai</string>
+    <string name="intro2_2">Mise à jour régulière</string>
+    <string name="intro2_3">Correction de bug rapide</string>
+    <string name="intro2_4">Support direct</string>
+    <string name="intro_more">Obtenez plus:</string>
+    <string name="intro_free">Votre version d'application est gratuite</string>
+    <string name="intro_get_pro">Obtenez NextGIS Mobile Pro</string>
 </resources>
