--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -5,6 +5,7 @@
   ~ Author:   Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
+  ~ Author:   Yoann Roncin, yoann.roncin@gmail.com
   ~ ******************************************************************************
   ~ Copyright (c) 2012-2017 NextGIS, info@nextgis.com
   ~
