Update translation for strings.xml
Дополнения к переводу

--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -34,12 +34,12 @@
     <string name="keep_screen_on_summary">Не гасити екран</string>
     <string name="show_scale_ruler">Показувати шкалу масштабу</string>
     <string name="show_ruler_measuring">Показувати лінійку вимірів</string>
-    <string name="show_zoom_controls">Показивати керування маштабу</string>
+    <string name="show_zoom_controls">Показувати керування маштабу</string>
     <string name="show_zoom_controls_summary">Показувати кнопки зуму +/- на карті</string>
     <string name="show_compass">Показувати міні компас</string>
     <string name="map">Карта</string>
     <string name="map_summary">Налаштування карти</string>
-    <string name="app_description">Мобільний ГІС додаток для візуалізації та збору даних у польових умовах та відправки їх на сервер. NextGIS Mobile також записує путь та відправляє координати на сервер.</string>
+    <string name="app_description">Мобільний ГІС додаток для візуалізації та збору даних у польових умовах та відправки їх на сервер. NextGIS Mobile також записує шлях та відправляє координати на сервер.</string>
     <string name="credits_intro">Ліцензії</string>
     <string name="credits">Деякі іконки використані в застосунку з <a href="http://icons8.com/android-icons">Icons8.com</a> з ліцензією <a href="http://creativecommons.org/licenses/by-nd/3.0/">CC BY-ND 3.0 license</a>, <a href="http://materialdesignicons.com/">materialdesignicons.com</a> та <a href="http://romannurik.github.io/AndroidAssetStudio/icons-launcher.html">romannurik.github.io</a> з ліцензією <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0 license</a></string>
     <string name="copyright"><![CDATA[© <a href=\"http://nextgis.com\">NextGIS</a>, 2012–2016]]></string>
@@ -74,14 +74,14 @@
     <string name="map_bg_light">Світлий</string>
     <string name="map_bg_neutral">Нейтральний</string>
     <string name="map_bg_dark">Темний</string>
-    <string name="map_path">Путь до карти</string>
-    <string name="map_path_summary">Путь до папки з картою. Зміна може привести до того, що папка не буде очищатися при видаленні програми</string>
-    <string name="select_map_path">Вкажіть путь до папки з картою</string>
+    <string name="map_path">Шлях до карти</string>
+    <string name="map_path_summary">Шлях до папки з картою. Зміна може привести до того, що папка не буде очищатися при видаленні програми</string>
+    <string name="select_map_path">Вкажіть шлях до папки з картою</string>
     <string name="moving">Переміщення…</string>
     <string name="warning_map_moving">Небезпечна операція! Не скасовуйте операцію і не зупиняйте додаток в процесі переміщення даних в нове місце. Це може привести до втрати даних!</string>
-    <string name="warning_folder_should_be_empty">Папка повинна бути пустою. Дія відмінена.</string>
+    <string name="warning_folder_should_be_empty">Папка повинна бути порожньою. Дію скасовано.</string>
     <string name="frequentest">, так часто, як можливо</string>
-    <string name="compass_vibrate">Вібрація при дотику</string>
+    <string name="compass_vibrate">Вібрація за дотику</string>
     <string name="compass_true_north">Показати справжню північ</string>
     <string name="compass_magnetic">Показувати магнітний полюс</string>
     <string name="compass_keep_screen">Залишати екран компасу ввімкненим</string>
@@ -119,43 +119,43 @@
     <string name="default_field_name">Опис</string>
     <string name="pref_sync_notification">Повідомлення про синхронізацію</string>
     <string name="tap_to_measure">Натисніть на карту аби обрати точки</string>
-    <string name="permissions">Разрешения</string>
-    <string name="requested_permissions">Приложению требуются некоторые разрешения для корректной работы: запись на устройство (для хранения данных), доступ
-        к местоположению и получение контактов (для создания и управления веб аккаунтами).</string>
-    <string name="track_restore">Продолжать трек после перезагрузки</string>
-    <string name="action_support">Support</string>
-    <string name="app_support">Please write us with questions, bug-reports and new features suggestions. Commercial support is available.</string>
-    <string name="email">Email</string>
+    <string name="permissions">Дозволи</string>
+    <string name="requested_permissions">Застосунок потребує певних дозволів для корекної роботи: запис на пристрій (для зберігання даних), доступ
+        до місцезнаходження та отримання контактів (для створення та керування веб акаунтами).</string>
+    <string name="track_restore">Продовжувати трек після перезапуску</string>
+    <string name="action_support">Підтримка</string>
+    <string name="app_support">Будь ласка напишіть нам, якщо у вас виникли питання, повідомлення про помилки або пропозиції до функціоналу. Доступна комерційна підтримка.</string>
+    <string name="email">Електронна пошта</string>
     <string name="email_src">info@nextgis.com</string>
     <string name="telegram">Telegram</string>
     <string name="telegram_src">\@nextgis_support</string>
     <string name="github">Github</string>
     <string name="github_src">http://github.com/nextgis/android_gisapp/issues</string>
-    <string name="web">Website</string>
+    <string name="web">Наш сайт</string>
     <string name="web_src">http://nextgis.com/nextgis-mobile</string>
-    <string name="not_installed">Application not installed</string>
-    <string name="action_help">Help</string>
-    <string name="location_distance_to">Distance to (m)</string>
-    <string name="pref_ga">Собирать статистику</string>
-    <string name="pref_ga_sum">Отправлять анонимные данные Google Analytics для улучшения приложения</string>
-    <string name="update_new">Найдена версия %1$s. Вы хотите обновиться?</string>
-    <string name="update_title">Обновить?</string>
-    <string name="update_check">Проверить обновления</string>
-    <string name="update_no">Обновлений не найдено</string>
-    <string name="intro1">Добро пожаловать в NextGIS Mobile!\n\nЭто приложение поможет вам:\n* Показывать карты из одного или нескольких слоёв\n* Загружать и создавать геоданные\n* Осуществлять полевой сбор данных\n* Записывать треки\nи многое другое!</string>
-    <string name="intro2">Войдите для эффективной работы, синхронизации и получения регулярных обновлений (необходима подписка). Вы можете войти позже через настройки.</string>
-    <string name="support_available">Доступна поддерживаемая версия</string>
-    <string name="more">Подробнее</string>
+    <string name="not_installed">Застосунок не встановлено</string>
+    <string name="action_help">Допомога</string>
+    <string name="location_distance_to">Відстань до (м)</string>
+    <string name="pref_ga">Збирати статистику</string>
+    <string name="pref_ga_sum">Надсилати анонімні дані до Google Analytics для покращення застосунку</string>
+    <string name="update_new">Виявлено версію %1$s. Чи бажаєте ви оновитися?</string>
+    <string name="update_title">Оновити?</string>
+    <string name="update_check">Перевірити на оновлення</string>
+    <string name="update_no">Оновлень не виявлено</string>
+    <string name="intro1">Ласкаво просимо до NextGIS Mobile!\n\nЦей застосунок допоможе вам:\n* Показувати карти з одного або кількох шарів\n* Завантажувати й створювати геодані\n* Виконувати польовий збір даних\n* Записувати треки\nта багато іншого!</string>
+    <string name="intro2">Увійдіть, щоб ефективно працювати, синхронізовувати дані та отримувати регулярні оновлення (потрібна підписка). Ви матимете змогу ввійти згодом через налаштування.</string>
+    <string name="support_available">Доступна підтримувана версія</string>
+    <string name="more">Докладніше</string>
     <string name="pricing">http://nextgis.ru/pricing/</string>
-    <string name="intro1_2">Загружайте и создавайте геоданные</string>
-    <string name="intro1_3">Собирайте полевые данные</string>
-    <string name="intro1_4">Записывайте треки</string>
-    <string name="intro1_1">Создавайте многослойные карты</string>
-    <string name="intro2_1">Новые функции, недоступные в бесплатной версии</string>
-    <string name="intro2_2">Регулярные обновления</string>
-    <string name="intro2_3">Быстрое исправление ошибок</string>
-    <string name="intro2_4">Прямая поддержка</string>
-    <string name="intro_more">Получите больше:</string>
-    <string name="intro_free">У вас бесплатная версия приложения</string>
-    <string name="intro_get_pro">Получить NextGIS Mobile Pro</string>
+    <string name="intro1_2">Завантажуйте та створюйте геодані</string>
+    <string name="intro1_3">Збирайте польові дані</string>
+    <string name="intro1_4">Записуйте треки</string>
+    <string name="intro1_1">Створюйте багатошарові карти</string>
+    <string name="intro2_1">Нові функції, недоступні у безкоштовній версії</string>
+    <string name="intro2_2">Регулярні оновлення</string>
+    <string name="intro2_3">Швидке виправлення помилок</string>
+    <string name="intro2_4">Пряма підтримка</string>
+    <string name="intro_more">Отримайте більше:</string>
+    <string name="intro_free">У вас безкоштовна версія застосунку</string>
+    <string name="intro_get_pro">Отримати NextGIS Mobile Pro</string>
 </resources>
