Add nextgis web tracking

--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -153,4 +153,6 @@
     <string name="intro_more">Get more:</string>
     <string name="intro_free">Your app version is free</string>
     <string name="intro_get_pro">Get NextGIS Mobile Pro</string>
+    <string name="track_uid">Your UID is: %1$s</string>
+    <string name="track_send">Send location to server</string>
 </resources>
