--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -7,7 +7,7 @@
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ Author:   Yoann Roncin, yoann.roncin@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2017 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2012-2018 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -155,4 +155,6 @@
     <string name="intro_more">Obtenez plus:</string>
     <string name="intro_free">Votre version d\'application est gratuite</string>
     <string name="intro_get_pro">Obtenez NextGIS Mobile Pro</string>
+    <string name="track_uid">Your UID is: %1$s</string>
+    <string name="track_send">Send location to server</string>
 </resources>
