--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -5,7 +5,7 @@
   ~ Author:   Maxim Dubinin, maxim.dubinin@nextgis.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2017 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2012-2018 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -154,4 +154,6 @@
     <string name="intro_more">Отримайте більше:</string>
     <string name="intro_free">У вас безкоштовна версія застосунку</string>
     <string name="intro_get_pro">Отримати NextGIS Mobile Pro</string>
+    <string name="track_uid">Your UID is: %1$s</string>
+    <string name="track_send">Send location to server</string>
 </resources>
