Add zoom and feet units, fix #595

--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -155,4 +155,6 @@
     <string name="intro_get_pro">Get NextGIS Mobile Pro</string>
     <string name="track_uid">Your UID is: %1$s</string>
     <string name="track_send">Send location to server</string>
+    <string name="preferred_units">Measurement system</string>
+    <string name="show_zoom_level">Show zoom level</string>
 </resources>
