--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -154,8 +154,8 @@
     <string name="intro_more">Отримайте більше:</string>
     <string name="intro_free">У вас безкоштовна версія застосунку</string>
     <string name="intro_get_pro">Отримати NextGIS Mobile Pro</string>
-    <string name="track_uid">Your UID is: %1$s</string>
-    <string name="track_send">Send location to server</string>
-    <string name="preferred_units">Measurement system</string>
-    <string name="show_zoom_level">Show zoom level</string>
+    <string name="track_uid">Ваш UID: %1$s</string>
+    <string name="track_send">Надіслати місцеположення на сервер</string>
+    <string name="preferred_units">Система вимірів</string>
+    <string name="show_zoom_level">Показати рівень наближення</string>
 </resources>
