--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -142,7 +142,7 @@
     <string name="intro2">Увійдіть, щоб ефективно працювати, синхронізовувати дані та отримувати регулярні оновлення (потрібна підписка). Ви матимете змогу ввійти згодом через налаштування.</string>
     <string name="support_available">Доступна підтримувана версія</string>
     <string name="more">Докладніше</string>
-    <string name="pricing">http://nextgis.ru/pricing/</string>
+    <string name="pricing">http://nextgis.ru/pricing-base/</string>
     <string name="intro1_2">Завантажуйте та створюйте геодані</string>
     <string name="intro1_3">Збирайте польові дані</string>
     <string name="intro1_4">Записуйте треки</string>
