--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -143,7 +143,7 @@
     <string name="intro2">Enregistrez vous pour tirer un maximum d\'avantage de cette application, synchronisé vos données et optenez des mises à jour régulières (inscription au service de support nécessaire). Vous pouvez vous inscrire plus tard dans les paramètres.</string>
     <string name="support_available">Une version avec support et disponible</string>
     <string name="more">Plus</string>
-    <string name="pricing">http://nextgis.com/pricing/</string>
+    <string name="pricing">http://nextgis.com/pricing-base/</string>
     <string name="intro1_1">Créer une carte multi-couches</string>
     <string name="intro1_2">Ajouter et créer des geodata</string>
     <string name="intro1_3">Collecter des données terrain</string>
