--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -158,4 +158,6 @@
     <string name="track_send">Надіслати місцеположення на сервер</string>
     <string name="preferred_units">Система вимірів</string>
     <string name="show_zoom_level">Показати рівень наближення</string>
+    <string name="restore_layers">Restore broken layers</string>
+    <string name="select_layer_to_restore">Select layer to restore</string>
 </resources>
